--- a/Makefile.vita
+++ b/Makefile.vita
@@ -23,21 +23,17 @@ RANLIB=$(PREFIX)-ranlib
 FS_BINARY=freespace2
 FS_DEMO_BINARY=freespace2_demo
 LDFLAGS= -lopenal
-LDFLAGS	+= -lSDL2 -lvitaGL -lvitashark -lmathneon -lSceShaccCgExt -lSceShaccCg_stub -ltaihen_stub \
+LDFLAGS	+= -lSDL -lvitaGL -lvitashark -lmathneon -lSceShaccCgExt -lSceShaccCg_stub -ltaihen_stub \
 	-lpthread -lSceAudio_stub -lSceAudioIn_stub -lSceHid_stub -lz -lScePower_stub \
 	-lSceAppMgr_stub -lSceCommonDialog_stub -lSceCtrl_stub -lSceGxm_stub -lSceMotion_stub -lSceNet_stub \
 	-lSceTouch_stub -lSceSysmodule_stub -lSceKernelDmacMgr_stub -lSceDisplay_stub -lSceIme_stub
-CFLAGS=-g -DPLAT_UNIX $(shell sdl-config --cflags) -Iinclude/ # -fwritable-strings -Wall 
-CFLAGS+=-fsigned-char -Wno-format-y2k -Wl,-q -O3 -I$(VITASDK)/arm-vita-eabi/include/SDL2
-ifeq ($(strip $(PANDORA)),true)
-	CFLAGS+=-ffast-math -pipe -mcpu=cortex-a8 -mfpu=neon -ftree-vectorize -mfloat-abi=softfp -fsingle-precision-constant -mno-unaligned-access -fpermissive
-endif
-ifeq ($(strip $(ODROID)),true)
-        CFLAGS+=-ffast-math -pipe -mcpu=cortex-a9 -mfpu=neon -ftree-vectorize -mfloat-abi=hard -fsingle-precision-constant -mno-unaligned-access -fpermissive
-endif
+CFLAGS=-g -DPLAT_UNIX -Iinclude/ -DHAVE_GLES \
+	-Wno-narrowing -Wl,-q,--wrap,fopen,--wrap,stat,--wrap,opendir,--wrap,remove,--wrap,sceTouchPeek
+CFLAGS+=-fsigned-char -Wno-format-y2k -Ofast -I$(VITASDK)/arm-vita-eabi/include/SDL
+CFLAGS+=-ffast-math -pipe -mcpu=cortex-a8 -mfpu=neon -ftree-vectorize -mfloat-abi=hard -fsingle-precision-constant -mno-unaligned-access -fpermissive
 
 ifeq ($(strip $(DEBUG)),false)
-	CFLAGS+=-DNDEBUG -O3
+	CFLAGS+=-DNDEBUG -Ofast
 	CFLAGS+=-funroll-loops # -fomit-frame-pointer # not stable?
 	#CFLAGS+=-march=pentiumpro -mcpu=pentiumpro # not stable?
 endif
@@ -71,7 +67,8 @@ endif
 %.fs1.demo.o: %.cpp
 	$(CC) -c -o $@ $< $(CFLAGS)
 	
-CODE_SOURCES =./src/anim/animplay.cpp \
+CODE_SOURCES = ./src/vita/fnmatch.cpp \
+	./src/anim/animplay.cpp \
 	./src/anim/packunpack.cpp \
 	./src/asteroid/asteroid.cpp \
 	./src/bmpman/bmpman.cpp \
@@ -344,22 +341,13 @@ CODE_OBJECTS=$(CODE_SOURCES:.cpp=.$(POSTFIX).o)
 FS_OBJECTS=$(FS_SOURCES:.cpp=.$(POSTFIX).o)
 FONTTOOL_OBJECTS=$(FONTTOOL_SOURCES:.cpp=.$(POSTFIX).o)
 
-all: $(FS_BINARY).vpk
-
-%.vpk: %.velf
-	vita-mksfoex -s TITLE_ID=FREESPACE -d ATTRIBUTE2=12 "freespace" param.sfo
-	vita-pack-vpk -s param.sfo -b eboot.bin $@ \
-		-a livearea/icon0.png=sce_sys/icon0.png \
-		-a livearea/bg.png=sce_sys/livearea/contents/bg.png \
-		-a livearea/startup.png=sce_sys/livearea/contents/startup.png \
-		-a livearea/template.xml=sce_sys/livearea/contents/template.xml \
-		-a livearea/pic0.png=sce_sys/pic0.png
-		
-%.velf: %.elf
+all: $(FS_BINARY).bin
+	
+%.bin: %.elf
 	cp $< $<.unstripped.elf
 	$(PREFIX)-strip -g $<
 	vita-elf-create $< $@
-	vita-make-fself -c -s $@ eboot.bin
+	vita-make-fself -c -s $@ $(FS_BINARY).bin
 
 $(CODE_BINARY): $(CODE_OBJECTS)
 	rm -rf $(CODE_BINARY)
@@ -369,7 +357,7 @@ ifeq ($(strip $(MACOSX)),true)
 endif
 
 $(FS_BINARY).elf: $(CODE_BINARY) $(FS_OBJECTS)
-	$(CC) -o $(FS_BINARY).elf $(FS_OBJECTS) $(CODE_BINARY) $(LDFLAGS)
+	$(CC) -o $(FS_BINARY).elf $(FS_OBJECTS) $(CODE_BINARY) $(LDFLAGS) $(CFLAGS)
 
 cryptstring:
 	$(CC) -o cryptstring $(CFLAGS) src/cryptstring/cryptstring.cpp
